# Generated by Django 5.2.7 on 2025-12-17 17:27

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('tarot_journal_api', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Element',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('type', models.CharField(max_length=50)),
            ],
        ),
        migrations.CreateModel(
            name='Value',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('type', models.CharField(max_length=50)),
            ],
        ),
        migrations.CreateModel(
            name='Card',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=250)),
                ('major_arcana', models.BooleanField(default=False)),
                ('meaning_upright', models.TextField()),
                ('meaning_reverse', models.TextField()),
                ('element', models.ForeignKey(on_delete=django.db.models.deletion.DO_NOTHING, related_name='cards', to='tarot_journal_api.element')),
                ('value', models.ForeignKey(on_delete=django.db.models.deletion.DO_NOTHING, related_name='cards', to='tarot_journal_api.value')),
            ],
        ),
    ]
